[gd_scene load_steps=12 format=3 uid="uid://dik4st7x34ir6"]

[ext_resource type="Script" path="res://scripts/Hud.gd" id="1_iab2h"]
[ext_resource type="Texture2D" uid="uid://b4bikr6g6xdw7" path="res://art/motivation_icon.png" id="3_wjbkl"]
[ext_resource type="Texture2D" uid="uid://cu85eelkowv1l" path="res://art/energy_icon.png" id="4_0diia"]
[ext_resource type="Texture2D" uid="uid://c0dtkaaea0744" path="res://art/attributes_slider.png" id="4_88p1x"]
[ext_resource type="Texture2D" uid="uid://w1gffi1o0bmf" path="res://art/hunger_icon.png" id="5_mjsp5"]
[ext_resource type="Texture2D" uid="uid://bljxior27m3ko" path="res://art/progress_icon.png" id="6_hge2w"]
[ext_resource type="Texture2D" uid="uid://cetragp0v7ih0" path="res://art/Progress_Slider.png" id="7_rcasl"]
[ext_resource type="Theme" uid="uid://qhg2fntqieb0" path="res://config/FontTheme.tres" id="8_brecx"]
[ext_resource type="Texture2D" uid="uid://ch2nhffrk30d4" path="res://art/MV_Jam_Money_Icon.png" id="9_7qrqp"]
[ext_resource type="Texture2D" uid="uid://btcuo3wtxch6u" path="res://art/timer_gui_marco.png" id="10_0aqfg"]
[ext_resource type="Texture2D" uid="uid://dusbgpr176id" path="res://art/timer_gui_filled.png" id="11_sp7i3"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_iab2h")

[node name="MotivationProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_top = 493.0
offset_right = 250.0
offset_bottom = 743.0
step = 0.01
value = 100.0
fill_mode = 4
texture_over = ExtResource("3_wjbkl")
texture_progress = ExtResource("4_88p1x")
tint_under = Color(0, 0, 0, 1)
radial_initial_angle = 90.0
radial_fill_degrees = 254.0

[node name="EnergyProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 493.0
offset_right = 443.0
offset_bottom = 743.0
step = 0.01
value = 100.0
fill_mode = 4
texture_over = ExtResource("4_0diia")
texture_progress = ExtResource("4_88p1x")
radial_initial_angle = 90.0
radial_fill_degrees = 254.0

[node name="HungerProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 493.0
offset_right = 632.0
offset_bottom = 743.0
step = 0.01
value = 100.0
fill_mode = 4
texture_over = ExtResource("5_mjsp5")
texture_progress = ExtResource("4_88p1x")
radial_initial_angle = 90.0
radial_fill_degrees = 254.0

[node name="ProjectProgress" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 1080.0
offset_top = 91.0
offset_right = 1300.0
offset_bottom = 731.0
step = 0.01
value = 27.0
fill_mode = 3
texture_over = ExtResource("6_hge2w")
texture_progress = ExtResource("7_rcasl")

[node name="Label" type="Label" parent="ProjectProgress"]
layout_mode = 0
offset_left = 61.0
offset_top = 483.0
offset_right = 158.0
offset_bottom = 570.0
theme = ExtResource("8_brecx")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "10%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 8.0
offset_right = 1360.0
offset_bottom = 145.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_7qrqp")

[node name="Label" type="Label" parent="Money"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_right = -102.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_brecx")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "1000000"
horizontal_alignment = 2

[node name="DayProgress" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = -46.0
offset_top = -81.0
offset_right = 514.0
offset_bottom = 189.0
max_value = 90.0
step = 0.01
value = 19.42
fill_mode = 1
texture_over = ExtResource("10_0aqfg")
texture_progress = ExtResource("11_sp7i3")
